k8s/openwebui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: ai
spec:
  selector:
    app: openwebui

  ports:
    - name: http
      port: 80
      targetPort: 8080

  type: ClusterIP
