k8s/openwebui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui
  namespace: ai

  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"

spec:
  ingressClassName: nginx

  rules:
    - host: ai.z-script.io

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: openwebui
                port:
                  number: 80
